# robotframework-testdoc

./: .gitignore  .pre-commit-config.yaml  404.html  DEVELOPMENT.md  PLUGIN_USAGE.md  README.md  create_release.sh  create_vsce_release.sh  gettingstarted.html  index.html  mkdocs.yml  pyproject.toml
.github/agents/: robotframework-python-developer.agent.md  senior-frontend-developer.agent.md
.github/workflows/: build-publish.yml  build.yml  changelog.yml  deploy-pypi.yml  performance.yml  publish-docs.yml  python-build.yml  release-vscode-extension.yml  release.yml
advanced_usage/: index.html  mkdocs.html
advanced_usage/mkdocs/: index.html
api/: api.html
api/api/: index.html
atest/: output_clarity.html  second_test_cli.robot  test_cli.py  test_cli.robot
atest/acceptance/: test_cli.py  test_keyword_documentation.py
atest/mkdocs_example/: mkdocs.yml
atest/mkdocs_example/docs/: index.md
atest/mkdocs_example/docs/_partials/: suite_page.md
atest/performance/: test_performance.py
atest/testcases/component_b/: suite_b.robot
atest/testcases/component_b/subcomponent_b/: subsuite_b.robot
atest/testdata/acceptance/resources/: keyword_library.py
atest/testdata/acceptance/testcases/component_a/: suite_a.robot  suite_run_keywords_setup.robot  suite_without_tags.robot
atest/testdata/acceptance/testcases/component_b/: suite_b.robot
atest/testdata/acceptance/testcases/component_c/: suite_c.robot
atest/testdata/performance/resources/libraries/: common.py
cli/: cli.html
cli/cli/: index.html
docs/: FUTURE_IDEAS.md
docs/demo_data/tests/: __init__.robot
docs/demo_data/tests/API/Auth/: __init__.robot  suite_01.robot  suite_02.robot  suite_03.robot  suite_04.robot  suite_05.robot  suite_06.robot  suite_07.robot
docs/demo_data/tests/API/Devices/: __init__.robot  suite_01.robot  suite_02.robot  suite_03.robot  suite_04.robot  suite_05.robot  suite_06.robot  suite_07.robot
docs/demo_data/tests/API/Health/: __init__.robot  suite_01.robot  suite_02.robot  suite_03.robot  suite_04.robot  suite_05.robot  suite_06.robot  suite_07.robot
docs/demo_data/tests/API/Users/: __init__.robot  suite_01.robot  suite_02.robot  suite_03.robot  suite_04.robot  suite_05.robot  suite_06.robot  suite_07.robot
docs/mkdocs/: mkdocs.yml
docs/mkdocs/docs/: gettingstarted.md  index.md
docs/mkdocs/docs/_partials/: suite_page.md
docs/mkdocs/docs/advanced_usage/: index.md  mkdocs.md
docs/mkdocs/docs/api/: api.md
docs/mkdocs/docs/cli/: cli.md
docs/mkdocs/docs/stylesheets/: custom.css
docs/mkdocs/docs/usage/: gettingstarted.md  index.md  jinja2.md  mkdocs.md  output_formats.md  pdf.md  vscode-extension.md
docs/tapes/: cmkdocs.tape  cmkdocs_temp.tape  customjinja.tape  general_usage.tape  help.tape  mkdocs_temp_usage.tape  mkdocs_usage.tape
examples/mkdocs/default/: mkdocs.yml
examples/mkdocs/default/docs/: index.md
search/: search_index.json
src/testdoc/: __about__.py  __main__.py  cli.py  testdoc.py
src/testdoc/helper/: cli_args.py  cliargs.py  datetimeconverter.py  logger.py  path_converter.py  pathconverter.py  toml_reader.py
src/testdoc/html/rendering/: jinja2.py  json_renderer.py  mkdocs.py  pdf_renderer.py  render.py
src/testdoc/html/templates/: jinja_template_01.html
src/testdoc/html/themes/: theme_config.py  themes.py
src/testdoc/html_rednering/: render.py  render_testdoc.py
src/testdoc/html_rendering/: render.py
src/testdoc/parser/: models.py  parser.py  suite_parser.py  testcaseparser.py  testsuiteparser.py
src/testdoc/parser/modifier/: sourceprefixmodifier.py  suitefilemodifier.py
stylesheets/: pygments-myrobot.css
usage/: index.html  jinja2.html  mkdocs.html  output_formats.html  pdf.html  vscode-extension.html
usage/jinja2/: index.html
usage/mkdocs/: index.html
vscode-extension/: README.md  extension.js  package.json
(+106 files in other folders)
